Fix layout issue

--- a/lowstepper_wasm_demo/src/styles.css
+++ b/lowstepper_wasm_demo/src/styles.css
@@ -16,6 +16,9 @@ p {
 .container {
   width: 480px;
   display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;;
   margin: 0 auto;
   margin-top:20px;
 }
